# daily_trading

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
daily_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
daily_trading_c_program/: daily_trading.csproj  imbalance_program.cs
data/: Industries stock list - all.csv  S&P500-Info.csv
data/.ipynb_checkpoints/: Industries stock list - all-checkpoint.csv  S&P500-Symbols-checkpoint.csv
data/historical_etf_data/: bjk_2017-01-03_to_2020-4-29.csv  bjk_2017-01-03_to_2020-5-15.csv  bjk_2017-01-03_to_2020-5-22.csv  bjk_2017-01-03_to_2020-5-29.csv  bjk_2017-01-03_to_2020-6-12.csv  bjk_2017-01-03_to_2020-6-19.csv  bjk_2017-1-1_to_2020-4-27.csv  bjk_2017-1-1_to_2020-6-26.csv  dia_2017-01-03_to_2020-4-27.csv  dia_2017-01-03_to_2020-4-29.csv  dia_2017-01-03_to_2020-5-15.csv  dia_2017-01-03_to_2020-5-22.csv  dia_2017-01-03_to_2020-5-29.csv  dia_2017-01-03_to_2020-5-8.csv  dia_2017-01-03_to_2020-6-12.csv  dia_2017-01-03_to_2020-6-19.csv  dia_2017-01-03_to_2020-7-10.csv  dia_2017-01-03_to_2020-7-2.csv  dia_2017-1-1_to_2020-6-26.csv  ewz_2017-1-1_to_2020-7-10.csv  hpt_2017-1-1_to_2020-4-29.csv  ibuy_2017-01-03_to_2020-4-29.csv  ibuy_2017-01-03_to_2020-5-15.csv  (+102 more)
imbalance_c_program/: imbalance_program.cs
notebooks/: S&P500-Info.csv  S&P500-Symbols.csv  download_iex_data.ipynb  import_historical_data.ipynb  import_historical_kaggle_data.ipynb  test_iex_Data.ipynb  train-nn-tucker-decomposition.ipynb  train_model.ipynb  train_nn_model.ipynb
tests/: test_daily_trading.py
(+1043 files in other folders)
