[tool.poetry]
name = "daily_trading"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.2"
requests = "^2.23.0"
datetime = "^4.3"
iexfinance = "^0.4.3"
lxml = "^4.5.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyterlab = "^2.1.0"
ipykernel = "^5.2.1"
seaborn = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
