[tool.poetry]
name = "daily_trading"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.0.1"
numpy = "^1.18.2"
requests = "^2.23.0"
datetime = "^4.3"
iexfinance = "^0.4.3"
lxml = "^4.5.0"
pyyaml = "^5.3.1"
tqdm = "^4.45.0"
sklearn = "^0.0"
holidays = "^0.10.2"
keras = "^2.3.1"
tensorflow-estimator = "==2.1.0"
tensorflow = "^2.1.0"
filterpy = "^1.4.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyterlab = "^2.1.0"
ipykernel = "^5.2.1"
seaborn = "^0.10.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
